lab1/Test/L1-A-6-67.output
Error Type B at Line 2
Error Type B at Line 3
Error Type B at Line 5
Error Type A at Line 6
Error Type A at Line 6
