lab1/Test/L1-A-6-67.cmm
struct {
  struct x_hjI9rzsp0Pk7uz lZ = - nvVaoTdq = ;
  int P7PvwoeW4adcFSYOU = ;
  int d = ifgpzKWAT6tkGPW 
};
\: